[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resource/Imagens_Ingredientes.tres" type="Texture" id=1]
[ext_resource path="res://Resource/Imagens_Operação.tres" type="Texture" id=2]
[ext_resource path="res://Resource/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Script/Pedido.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[node name="Pedido" type="Panel"]
margin_right = 201.0
margin_bottom = 143.0
rect_min_size = Vector2( 201, 143 )
script = ExtResource( 4 )

[node name="Tempo_restante" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0197044
anchor_top = 0.040201
anchor_right = 0.980296
anchor_bottom = 0.959799

[node name="Ingrediente" type="TextureRect" parent="VBoxContainer"]
margin_right = 193.0
margin_bottom = 76.0
size_flags_horizontal = 5
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 193.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Operacao" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 193.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Barra_tempo" type="ProgressBar" parent="VBoxContainer"]
margin_top = 107.0
margin_right = 193.0
margin_bottom = 131.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
value = 100.0
percent_visible = false

[connection signal="timeout" from="Tempo_restante" to="." method="_on_Tempo_restante_timeout"]
